hopefully this solves some safari/chrome issues on mobile

--- a/styles.css
+++ b/styles.css
@@ -60,13 +60,20 @@ p {
   font-size: 1.5em;
   text-transform: lowercase;
   text-shadow: 0 0 1px #000;
-  user-select: none;
 }
 
 span {
   display: block;
   color: #fff;
   text-transform: uppercase;
+}
+
+p, 
+span {
+  /* prevent text from being selectable */
+  -webkit-user-select: none; /* Safari 3.1+ */
+  -moz-user-select: none; /* Firefox 2+ */
+  -ms-user-select: none; /* IE 10+ */
   user-select: none;
 }
 
